Fix heroIMG alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -7263,9 +7263,10 @@ h3 {
 
 @media (min-width: 992px) {
   #mainNav {
+    background: transparent;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-    transition: padding-top 0.3s, padding-bottom 0.3s; }
+    transition: padding-top 0.3s, padding-bottom 0.3s; background: 0.2s}
     #mainNav .navbar-brand {
       font-size: 1.75em;
       transition: font-size 0.3s; }
@@ -7278,14 +7279,20 @@ h3 {
         color: var(--dark-green);}
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
-    padding-bottom: 0.5rem; }
+    padding-bottom: 0.5rem;
+    background-color: var(--pink);
+    -webkit-box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.18);
+    -moz-box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.18);
+    box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.18);}
     #mainNav.navbar-shrink .navbar-brand {
       font-size: 1.5em; } }
 
 .masthead {
 height:100vh;
 display:flex;
-background: url("/assets/img/heroIMG.jpeg");}
+background: url("/assets/img/heroIMG.jpg");
+background-repeat: no-repeat;
+background-size: cover;}
   .masthead .masthead-heading {
     font-size: 2.75rem;
     line-height: 2.75rem; }
@@ -7434,18 +7441,6 @@ form .row:first-child .floating-label-form-group {
 
 .text-light-green{
   color: var(--light-green);
-}
-
-.navbar-default{
-  transition:200ms ease;
-  background:transparent;
-}
-
-.navbar-default.scrolled{
-  background-color: var(--pink);
-  -webkit-box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.18);
-  -moz-box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.18);
-  box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.18);
 }
 
 #about {
